--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,14 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.9
   qr_flutter: ^4.1.0
+  barcode: ^2.2.5
+
+  # ユーザー登録
+  image_picker: ^1.0.7
+  path: ^1.9.0
+  # 印刷
+  printing: ^5.11.0
+  pdf: ^3.10.1
 
 dev_dependencies:
   flutter_test:
@@ -93,7 +101,22 @@ flutter:
   fonts:
     - family: NotoSansJP
       fonts:
-        - asset: assets/fonts/NotoSansJP-VariableFont_wght.ttf
+        - asset: assets/fonts/NotoSansJP-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/NotoSansJP-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/NotoSansJP-Light.ttf
+          weight: 300
+        - asset: assets/fonts/NotoSansJP-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/NotoSansJP-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/NotoSansJP-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/NotoSansJP-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/NotoSansJP-Black.ttf
+          weight: 900
     - family: Montserrat
       fonts:
         - asset: assets/fonts/Montserrat-Bold.ttf
