--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,9 +50,17 @@ dependencies:
   pdf: ^3.10.1
   just_audio: ^0.9.36
 
+  # drift
+  drift: ^2.15.0
+  sqlite3_flutter_libs: ^0.5.22
+  path_provider: ^2.1.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.11
+  drift_dev: ^2.15.0
+  drift_db_viewer: ^2.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
