--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,12 +55,19 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.22
   path_provider: ^2.1.3
 
+  # Hive for local storage
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  collection: ^1.18.0 # Added for firstWhereOrNull
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.4.11
   drift_dev: ^2.15.0
   drift_db_viewer: ^2.0.0
+  # Hive code generation
+  hive_generator: ^2.0.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
